k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pace
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: pace
