k8s/prod/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: pace
