k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pace
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
spec:
  rules:
    - host: lauf-gegen-rechts.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prod-pace
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pace-www
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
spec:
  rules:
    - host: www.lauf-gegen-rechts.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prod-pace
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pace-insecure
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  rules:
    - host: www.lauf-gegen-rechts.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prod-pace
                port:
                  number: 3000
